edit styles,mediqrys,coding the btn of mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <body>
     <main>
         <section class="left">
+
+            <div class="checbox">
+                <input type="checkbox" id="checkbox">
+                <label for="checbox" class="label">
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                    <div class="ball"></div>
+                </label>
+            </div>
+
             <div class="left-image">
                 <img src="images/Minip100.jpg">
                 <h2>Abdoul Rahim BAH</h2>
@@ -31,7 +41,7 @@
                     <li> <p>CSS</p> <progress max="100" value="65"></progress> </li>
                     <li> <p>MySQL</p> <progress max="100" value="46"></progress> </li>
                     <li> <p>PHP</p> <progress max="100" value="46"></progress> </li>
-                    <li> <p>JAVASCRIPT</p> <progress max="100" value="50"></progress> </li>
+                    <li> <p>JAVASCRIPT</p> <progress max="100" value="20"></progress> </li>
                     
                 </ul>
             </div>
@@ -88,6 +98,11 @@
                 </ul>
             </div>
         </sectition>
+
+        <div class="btn">
+            <img src="images/hautdp.png" class="hautdp">
+        </div>
+
     </main>
     <footer>
         <p>Mes reseaux</p>
@@ -96,5 +111,6 @@
         <i class="fab fa-twitter-square fa-2x"></i>
         <p>Copyright 2021</p>
     </footer>
+    <script src="index.js" type="text/JavaScript"></script>
 </body>
 </html>
