--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <title>the cv</title>
 </head>
-<body>
-    <main>
+<body id="checked">
+    <main class="border">
+        <!----------------------- LEFT PART ---------------------->
         <section class="left">
 
-            <div class="checbox">
-                <input type="checkbox" id="checkbox">
-                <label for="checbox" class="label">
+            <div>
+                <input type="checkbox"
+                class="checkbox" id="checkbox" >
+                <label for="checkbox"
+                class="label">
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
                     <div class="ball"></div>
@@ -37,11 +40,11 @@
             <div class="skills">
                 <h3> <i class="fas fa-cog"></i> COMPETENCES</h3>
                 <ul>
-                    <li> <p>HTML5</p> <progress max="100" value="76"></progress> </li>
-                    <li> <p>CSS</p> <progress max="100" value="65"></progress> </li>
-                    <li> <p>MySQL</p> <progress max="100" value="46"></progress> </li>
-                    <li> <p>PHP</p> <progress max="100" value="46"></progress> </li>
-                    <li> <p>JAVASCRIPT</p> <progress max="100" value="20"></progress> </li>
+                    <li> <p>HTML5</p> <progress class="lines-shadow" max="100" value="76"></progress> </li>
+                    <li> <p>CSS</p> <progress class="lines-shadow" max="100" value="65"></progress> </li>
+                    <li> <p>MySQL</p> <progress class="lines-shadow" max="100" value="46"></progress> </li>
+                    <li> <p>PHP</p> <progres class="lines-shadow"max="100" value="46"></progres> </li>
+                    <li> <p>JAVASCRIPT</p> <progress class="lines-shadow" max="100" value="20"></progress> </li>
                     
                 </ul>
             </div>
@@ -56,6 +59,7 @@
             </div>
 
         </section>
+        <!--------------------------------- RIGHT PART ------------------------>
         <sectition class="right">
             <div class="experience">
                 <h1> <i class="fas fa-briefcase"></i> EXPERIENCES PROFESSIONELLES</h1>
