--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>the cv</title>
 </head>
 <body id="checked">
-    <main class="border">
+    <main>
+        <div class="container">
         <!----------------------- LEFT PART ---------------------->
         <section class="left">
 
@@ -106,7 +107,7 @@
         <div class="btn">
             <img src="images/hautdp.png" class="hautdp">
         </div>
-
+    </div>
     </main>
     <footer>
         <p>Mes reseaux</p>
