--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <!----------------------- LEFT PART ---------------------->
         <section class="left">
 
-            <div>
+
+            <div class="left-image">
+                <img src="images/Minip100.jpg">
+            </div>
+            
+            <div class="buttom">
+                <h2>Abdoul Rahim BAH</h2>
                 <input type="checkbox"
                 class="checkbox" id="checkbox" >
                 <label for="checkbox"
@@ -25,10 +31,6 @@
                 </label>
             </div>
 
-            <div class="left-image">
-                <img src="images/Minip100.jpg">
-                <h2>Abdoul Rahim BAH</h2>
-            </div>
             <div class="personal">
                 <ul>
                     <li><i class="fas fa-briefcase"></i> Développeur FrontEnd</li>
@@ -102,14 +104,23 @@
                     <li><p>bla blea beldkue boehag dljbel eljt qkeet</p></li>
                 </ul>
             </div>
-        </sectition>
+
+            <!-- <div class="loisirs">
+                <ul>
+                    <li>LOISIRS</li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div> -->
+
+        </section>
 
         <div class="btn">
             <img src="images/hautdp.png" class="hautdp">
         </div>
     </div>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Mes reseaux</p>
         <i class="fab fa-facebook-square fa-2x"></i>
         <i class="fab fa-linkedin fa-2x"></i>
