--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><i class="fas fa-briefcase"></i> Développeur FrontEnd</li>
                     <li><i class="fas fa-location-arrow"></i> France</li>
                     <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
-                    <li><i class="fas fa-phone"></i> 07 53 56 46 19</li>
+                    <li><i class="fas fa-phone"></i> 620 92 92 13</li>
                 </ul>
                 <hr>
             </div>
@@ -64,37 +64,69 @@
                 <ul>
                     <li><i class="fas fa-briefcase"></i>  Agent polyvalent Délices Exotic </li>
                     <li class="date"><i class="fas fa-calendar"></i> Novembre 2017 - <span class="current">en cours</span></li>
-                    <li> <p>bla blea beldkue boehag dljbel eljt qkeet</p> </li>
+                    <li> <p>Programmation des prix avec code barres</p> </li>
+                    <li> <p>Enregistrement des produits</p> </li>
+                    <li> <p>Gestion de stocks et mise ne rayon </p> </li>
+                    <li> <p>Réception des clients et gestion des reseaux sociaux</p> </li>
                 </ul>
                 <ul>
-                    <li> <i class="fas fa-briefcase"></i> Agent polyvalent Délices Exotic </li>
-                    <li class="date"><i class="fas fa-calendar"></i> Novembre 2017 - </li>
-                    <li> <p>bla blea beldkue boehag dljbel eljt qkeet</p> </li>
+                    <li> <i class="fas fa-briefcase"></i> Job d'été </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Juin 2017 - Novembre 2017 </li>
+                    <li> <p>Travaille à la chaîne</p> </li>
                 </ul>
                 <ul>
-                    <li><i class="fas fa-briefcase"></i> Agent polyvalent Délices Exotic</li>
-                    <li class="date"><i class="fas fa-calendar"></i> Novembre 2017 - </li>
-                    <li><p>bla blea beldkue boehag dljbel eljt qkeet</p></li>
+                    <li><i class="fas fa-briefcase"></i> CROUS Limoges </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Septembre 2015 - Juillet 2016 </li>
+                    <li><p>Délégué des étudiants de la faculté des sciences</p></li>
                 </ul>
             </div>
             <div class="education">
                 <h1><i class="fas fa-university"></i> FORMATIONS</h1>
                 <ul>
-                    <li>FORMATION DEV FRONTEND SIMPLON </li>
-                    <li class="date"><i class="fas fa-calendar"></i> 09/2020 - 11/2020 </li>
-                    <li><p>bla blea beldkue boehag dljbel eljt qkeet</p></li>
+                    <li><i class="fas fa-briefcase"></i> SIMPLON ROUBAIX </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Août 2021 - <span class="current">en cours</span></li>
+                    <li><p>Formation développeur FrontEnd</p></li>
                 </ul>
                 <ul>
                     <li>LICENCE BIOLOGIE UNIVERSITE DE LILLE </li>
                     <li class="date"><i class="fas fa-calendar"></i> 2017 - 2020</li>
-                    <li><p>bla blea beldkue boehag dljbel eljt qkeet</p></li>
+                    <li><p>Techniques d'analyse des molécules du vivant</p></li>
+                    <li><p>PCR et HPLC</p></li>
+                    <li><p>Synthèse des ovaires synthétique par l'imprimante 3D</p></li>
+                    <li><p>Marketing sur les emballages intelligents</p></li>
                 </ul>
                 <ul>
                     <li>CPEL UNIVERSITE DE LIMOGES </li>
                     <li class="date"><i class="fas fa-calendar"></i> 2015 - 2016</li>
-                    <li><p>bla blea beldkue boehag dljbel eljt qkeet</p></li>
-                </ul>
+                    <li><p>Classe Préparatoir pour Entrer en Licence</p></li>
             </div>
+
+            <div class="education">
+                <h1><i class="fas fa-icons"></i> CENTRE D'INTERET ET LOISIRS</h1>
+                <ul>
+                    <li><i class="fas fa-plane"></i> VOYAGES </li>
+                    <li class="date"><i class="fas fa-road"></i> Pays et villes visités</li>
+                    <li><p>Italie - Rome</p></li>
+                    <li><p></p>République Tchèque - Prague</li>
+                    <li><p></p>Netherland - Amsterdam</li>
+                    <li><p></p>Belgique - Bruxelles, Antwerpen</li>
+                    <li><p>France - Corse, Paris, Montpellier...etc</p></li>
+                </ul>
+                <ul>
+                    <li>SPORT</li>
+                    <li class="date"><i class="fas fa-futbol"></i> Football </li>
+                    <li class="date"><i class="fas fa-person-swimming"></i> Natation </li>
+                    <li class="date"><i class="fas fa-person-biking"></i> Course à vélo </li>
+                    <li class="date"><i class="fas fa-dumbbell"></i> Musculation </li>
+                    <!-- <li><p>fervent latérale droit</p></li> -->
+                </ul>
+                <ul>
+                    <li>GAMING </li>
+                    <li class="date"><i class="fas fa-vr-cardboard"></i> Jeux Vidéos</li>
+                    <li><p></p></li>
+                    <li><p></p></li>
+                    <li><p></p></li>
+
         </section>
         <div class="btn">
             <img src="images/hautdp.png" alt="" class="hautdp">
