--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
                     <li>CPEL UNIVERSITE DE LIMOGES </li>
                     <li class="date"><i class="fas fa-calendar"></i> 2015 - 2016</li>
                     <li><p>Classe Préparatoir pour Entrer en Licence</p></li>
+                </ul>
             </div>
-
+            </section>
+        <section>
             <div class="education">
                 <h1><i class="fas fa-icons"></i> CENTRE D'INTERET ET LOISIRS</h1>
                 <ul>
@@ -126,7 +128,8 @@
                     <li><p></p></li>
                     <li><p></p></li>
                     <li><p></p></li>
-
+                </ul>
+            </div>
         </section>
         <div class="btn">
             <img src="images/hautdp.png" alt="" class="hautdp">
@@ -141,6 +144,6 @@
         <i class="fab fa-twitter-square fa-2x"></i>
         <p>Copyright - 2021</p>
     </footer>
-    <script src="index.js"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
