update of phone number

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
             </div>
             <div class="buttom">
                 <h2>Abdoul Rahim BAH</h2>
-                <input type="checkbox"
-                class="checkbox" id="checkbox" >
-                <label for="checkbox"
-                class="label">
+                <input type="checkbox" class="checkbox" id="checkbox" >
+                <label for="checkbox" class="label">
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
                     <div class="ball"></div>
@@ -32,7 +30,7 @@
                     <li><i class="fas fa-briefcase"></i> Développeur FrontEnd</li>
                     <li><i class="fas fa-location-arrow"></i> France</li>
                     <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
-                    <li><i class="fas fa-phone"></i> 620 92 92 13</li>
+                    <li><i class="fas fa-phone"></i> 07 53 56 46 19 </li>
                 </ul>
                 <hr>
             </div>
@@ -131,6 +129,7 @@
                 </ul>
             </div>
         </section>
+        <!-- Button haut de pages -->
         <div class="btn">
             <img src="images/hautdp.png" alt="" class="hautdp">
         </div>
