mise a jour des infos personnelles

--- a/Mon_CV_en_code-main/index.html
+++ b/Mon_CV_en_code-main/index.html
@@ -27,10 +27,12 @@
             </div>
             <div class="personal">
                 <ul>
-                    <li><i class="fas fa-briefcase"></i> Développeur FrontEnd</li>
+                    <li><i class="fas fa-briefcase"></i> Etudiant en Informatique</li>
                     <li><i class="fas fa-location-arrow"></i> France</li>
                     <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
                     <li><i class="fas fa-phone"></i> 07 53 56 46 19 </li>
+                    <li><i class="fab fa-github"></i> https://github.com/bahrahim</li>
+                    <li><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/abdoul-rahim-bah-13856542/</li>
                 </ul>
                 <hr>
             </div>
