--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="personal">
                 <ul>
-                    <li><i class="fas fa-briefcase"></i> Développeur FrontEnd</li>
+                    <li><i class="fas fa-briefcase"></i> Développeur </li>
                     <li><i class="fas fa-location-arrow"></i> France</li>
                     <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
                     <li><i class="fas fa-phone"></i> 07 53 56 46 19 </li>
