modification du style personnel

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <li><i class="fas fa-location-arrow"></i> France</li>
                     <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
                     <li><i class="fas fa-phone"></i> 07 53 56 46 19 </li>
-                    <li><i class="fab fa-github"></i> https://github.com/bahrahim</li>
-                    <li><i class="fab fa-linkedin">https://www.linkedin.com/in/abdoul-rahim-bah-13856542/</i></li>
+                    <li><i class="fab fa-github"></i> <a href="https://github.com/bahrahim">Github Repos</a></li>
+                    <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/abdoul-rahim-bah-13856542/">Linkedin Profil</a></li>
                 </ul>
                 <hr>
             </div>
