mis à jour du cv

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- LEFT PART -->
         <section class="left">
             <div class="left-image">
-                <img src="images/Minip100.jpg" alt="">
+                <img src="images/Minip100.jpg" alt="mon profil">
             </div>
             <div class="buttom">
                 <h2>Abdoul Rahim BAH</h2>
@@ -29,10 +29,10 @@
                 <ul>
                     <li><i class="fas fa-briefcase"></i> Etudiant en Informatique </li>
                     <li><i class="fas fa-location-arrow"></i> France</li>
-                    <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
+                    <!--<li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>-->
                     <li><i class="fas fa-phone"></i> 07 53 56 46 19 </li>
                     <li><i class="fab fa-github"></i> <a href="https://github.com/bahrahim">Github Repos</a></li>
-                    <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/abdoul-rahim-bah-13856542/">Linkedin Profil</a></li>
+                    <li><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/abdoul-rahim-bah-13856542/">Linkedin Profil</a></li>
                 </ul>
                 <hr>
             </div>
@@ -40,10 +40,11 @@
                 <h3> <i class="fas fa-cog"></i> COMPETENCES</h3>
                 <ul>
                     <li> <p>HTML5</p> <progress class="lines-shadow" max="100" value="76"></progress> </li>
-                    <li> <p>CSS</p> <progress class="lines-shadow" max="100" value="65"></progress> </li>
+                    <li> <p>CSS / SASS</p> <progress class="lines-shadow" max="100" value="65"></progress> </li>
+                    <li> <p>React JS</p> <progress class="lines-shadow" max="100" value="56"></progress> </li>
                     <li> <p>MySQL</p> <progress class="lines-shadow" max="100" value="46"></progress> </li>
-                    <li> <p>PHP</p> <progress class="lines-shadow" max="100" value="46"></progress> </li>
-                    <li> <p>JAVASCRIPT</p> <progress class="lines-shadow" max="100" value="20"></progress> </li>
+                    <li> <p>Python / Java / C</p> <progress class="lines-shadow" max="100" value="36"></progress> </li>
+                    <li> <p>JAVASCRIPT</p> <progress class="lines-shadow" max="100" value="55"></progress> </li>
                     
                 </ul>
             </div>
@@ -62,8 +63,16 @@
             <div class="experience">
                 <h1> <i class="fas fa-briefcase"></i> EXPERIENCES PROFESSIONELLES</h1>
                 <ul>
+                    <li><i class="fas fa-briefcase"></i>  BENEVOLAT CROIX-ROUGE FRANÇAISE </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Mars 2021 - <span class="current">en cours</span></li>
+                    <li> <p>Chauffeur pour la collecte matinale</p> </li>
+                    <li> <p>Distribution des colis alimentaires</p> </li>
+                    <li> <p>Soutien scolaire</p> </li>
+                    <li> <p>Campagne de collecte de fonds au profit de la Croix-Rouge</p></li>
+                </ul>
+                <ul>
                     <li><i class="fas fa-briefcase"></i>  Agent polyvalent Délices Exotic </li>
-                    <li class="date"><i class="fas fa-calendar"></i> Novembre 2017 - <span class="current">en cours</span></li>
+                    <li class="date"><i class="fas fa-calendar"></i> Novembre 2017 - Sept 2021</li>
                     <li> <p>Programmation des prix avec code barres</p> </li>
                     <li> <p>Enregistrement des produits</p> </li>
                     <li> <p>Gestion de stocks et mise ne rayon </p> </li>
@@ -71,11 +80,11 @@
                 </ul>
                 <ul>
                     <li> <i class="fas fa-briefcase"></i> Job d'été </li>
-                    <li class="date"><i class="fas fa-calendar"></i> Juin 2017 - Novembre 2017 </li>
-                    <li> <p>Travaille à la chaîne</p> </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Juillet 2017 - Novembre 2017 </li>
+                    <li> <p>Travaille à la chaîne</p></li>
                 </ul>
                 <ul>
-                    <li><i class="fas fa-briefcase"></i> CROUS Limoges </li>
+                    <li><i class="fas fa-briefcase"></i> Crous Limoges </li>
                     <li class="date"><i class="fas fa-calendar"></i> Septembre 2015 - Juillet 2016 </li>
                     <li><p>Délégué des étudiants de la faculté des sciences</p></li>
                 </ul>
@@ -83,8 +92,13 @@
             <div class="education">
                 <h1><i class="fas fa-university"></i> FORMATIONS</h1>
                 <ul>
+                    <li><i class="fas fa-briefcase"></i> Enigma School </li>
+                    <li class="date"><i class="fas fa-calendar"></i> Sept 2021  - <span class="current">en cours</span></li>
+                    <li><p>Licence Informatique</p></li>
+                </ul>
+                <ul>
                     <li><i class="fas fa-briefcase"></i> SIMPLON ROUBAIX </li>
-                    <li class="date"><i class="fas fa-calendar"></i> Août 2021 - <span class="current">en cours</span></li>
+                    <li class="date"><i class="fas fa-calendar"></i> 01 Août 2021 - 30 Sept 2021</li>
                     <li><p>Formation développeur FrontEnd</p></li>
                 </ul>
                 <ul>
@@ -125,24 +139,22 @@
                 <ul>
                     <li>GAMING </li>
                     <li class="date"><i class="fas fa-vr-cardboard"></i> Jeux Vidéos</li>
-                    <li><p></p></li>
-                    <li><p></p></li>
-                    <li><p></p></li>
+                    <li><p>Call of duty</p></li>
+                    <li><p>FIFA</p></li>
+                    <li><p>The Uncharted</p></li>
                 </ul>
             </div>
         </section>
         <!-- Button haut de pages -->
         <div class="btn">
-            <img src="images/hautdp.png" alt="" class="hautdp">
+            <img src="images/hautdp.png" alt="fleche vers le haut de page" class="hautdp">
         </div>
     </div>
     </main>
                 <!-- FOOTER -->
     <footer class="footer">
-        <p>Mes réseaux</p>
-        <i class="fab fa-facebook-square fa-2x"></i>
-        <i class="fab fa-linkedin fa-2x"></i>
-        <i class="fab fa-twitter-square fa-2x"></i>
+        <!--<i class="fab fa-linkedin fa-2x"><a href="https://www.linkedin.com/in/abdoul-rahim-bah-13856542/"></a></i>-->
+        <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
         <p>Copyright - 2021</p>
     </footer>
     <script src="index.js"></script>
