loisirs et footer mis à jour

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <footer class="footer">
         <!--<i class="fab fa-linkedin fa-2x"><a href="https://www.linkedin.com/in/abdoul-rahim-bah-13856542/"></a></i>-->
         <li><i class="fas fa-envelope"></i> abdoulrahim.bahh@gmail.com</li>
-        <p>Copyright - 2021</p>
+        <p>&copy; - 2021 ARB</p>
     </footer>
     <script src="index.js"></script>
 </body>
